--- a/src/main/resources/Templates/Register/formRegister.html
+++ b/src/main/resources/Templates/Register/formRegister.html
@@ -3,75 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
 <body>
 <div class="container mt-1">
-    <main class="form-signin w-100 m-auto">
-        <form action="#" th:action="@{/register/process}" th:object="${registerUser}" method="post">
-            <div th:if="${myError}" class="alert alert-danger">
-                <span th:text="${myError}"></span>
-            </div>
-            <!-- User name -->
-            <div class="form-outline mb-4">
-                <input type="text" th:field="*{username}" name="username" placeholder="Input Username (*)" id="usernameid" class="form-control" />
-                <div th:if="${#fields.hasErrors('username')}">
-                    <ul>
-                        <li th:each="e: ${#fields.hasErrors('username')}" th:text="${e}"></li>
-                    </ul>
-                </div>
-                <label class="form-label" for="usernameid">User name</label>
-            </div>
 
-            <!-- Password input -->
-            <div class="form-outline mb-4">
-                <input type="password" th:field="*{password}" name="password" id="password" class="form-control" />
-                <div th:if="${#fields.hasErrors('password')}">
-                    <ul>
-                        <li th:each="e: ${#fields.hasErrors('password')}" th:text="${e}"></li>
-                    </ul>
-                </div>
-                <label class="form-label" for="password">Password</label>
+    <form action="#" th:action="@{/register/process}" th:object="${registerUser}" method="post">
+        <div th:if="${myError}" class="alert alert-danger">
+            <span th:text="${myError}"></span>
+        </div>
+        <!-- User name -->
+        <div class="form-outline mb-4">
+            <input type="text" th:field="*{username}" name="username" placeholder="Input Username (*)" id="usernameid"
+                   class="form-control"/>
+            <div th:if="${#fields.hasErrors('username')}">
+                <ul>
+                    <li th:each="e: ${#fields.hasErrors('username')}" th:text="${e}"></li>
+                </ul>
             </div>
+            <label class="form-label" for="usernameid">User name</label>
+        </div>
 
-            <!-- input the correct attribute name of the entity-->
-            <div class="form-outline mb-4">
-                <input type="text" th:field="*{firstName}" name="firstname" id="firstname" class="form-control" />
-                <div th:if="${#fields.hasErrors('firstName')}">
-                    <ul>
-                        <li th:each="e: ${#fields.hasErrors('firstName')}" th:text="${e}"></li>
-                    </ul>
-                </div>
-                <label class="form-label" for="firstname">First Name</label>
+        <!-- Password input -->
+        <div class="form-outline mb-4">
+            <input type="password" th:field="*{password}" name="password" id="password" class="form-control"/>
+            <div th:if="${#fields.hasErrors('password')}">
+                <ul>
+                    <li th:each="e: ${#fields.hasErrors('password')}" th:text="${e}"></li>
+                </ul>
             </div>
+            <label class="form-label" for="password">Password</label>
+        </div>
 
-            <div class="form-outline mb-4">
-                <input type="text" th:field="*{lastName}" name="lastname" id="lastname" class="form-control" />
-                <div th:if="${#fields.hasErrors('lastName')}">
-                    <ul>
-                        <li th:each="e: ${#fields.hasErrors('lastName')}" th:text="${e}"></li>
-                    </ul>
-                </div>
-                <label class="form-label" for="lastname">Last Name</label>
+        <!-- input the correct attribute name of the entity-->
+        <div class="form-outline mb-4">
+            <input type="text" th:field="*{firstName}" name="firstname" id="firstname" class="form-control"/>
+            <div th:if="${#fields.hasErrors('firstName')}">
+                <ul>
+                    <li th:each="e: ${#fields.hasErrors('firstName')}" th:text="${e}"></li>
+                </ul>
             </div>
+            <label class="form-label" for="firstname">First Name</label>
+        </div>
 
-            <div class="form-outline mb-4">
-                <input type="email" th:field="*{email}" name="firstname" id="email" class="form-control" />
-                <div th:if="${#fields.hasErrors('email')}">
-                    <ul>
-                        <li th:each="e: ${#fields.hasErrors('email')}" th:text="${e}"></li>
-                    </ul>
-                </div>
-                <label class="form-label" for="email">Email</label>
+        <div class="form-outline mb-4">
+            <input type="text" th:field="*{lastName}" name="lastname" id="lastname" class="form-control"/>
+            <div th:if="${#fields.hasErrors('lastName')}">
+                <ul>
+                    <li th:each="e: ${#fields.hasErrors('lastName')}" th:text="${e}"></li>
+                </ul>
             </div>
+            <label class="form-label" for="lastname">Last Name</label>
+        </div>
 
-            <button class="btn btn-primary w-100 py-2" type="submit">Register</button>
-            <p class="mt-5 mb-3 text-body-secondary">© 2017–2024</p>
-        </form>
-    </main>
+        <div class="form-outline mb-4">
+            <input type="email" th:field="*{email}" name="firstname" id="email" class="form-control"/>
+            <div th:if="${#fields.hasErrors('email')}">
+                <ul>
+                    <li th:each="e: ${#fields.hasErrors('email')}" th:text="${e}"></li>
+                </ul>
+            </div>
+            <label class="form-label" for="email">Email</label>
+        </div>
+
+        <button class="btn btn-primary w-100 py-2" type="submit">Register</button>
+        <p class="mt-5 mb-3 text-body-secondary">© 2017–2024</p>
+    </form>
 </div>
-<script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="/docs/5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
