--- a/src/main/resources/Templates/home.html
+++ b/src/main/resources/Templates/home.html
@@ -2,33 +2,108 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Public</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Home Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link th:href="@{/CSS/main.css}" rel="stylesheet">
 
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-sm-6">
-            <h3>He thong quan ly sinh vien</h3>
-            <h4>Trang chu</h4>
-            <div>
-                <button sec:authorize="hasAnyRole('ADMIN', 'MANAGER', 'TEACHER', 'STUDENT', 'USER', 'PARENT')" class="btn btn-success">Xem</button>
-                <button sec:authorize="hasAnyRole('ADMIN', 'MANAGER')" class="btn btn-success">Sửa</button>
-                <button sec:authorize="hasAnyRole('ADMIN')" class="btn btn-success">Xóa</button>
-            </div>
-        </div>
-        <div class="col-sm-6">
-            Xin chào <b><span sec:authentication="principal.username"></span></b>,
-            <span sec:authentication="principal.authorities"></span>
+<div class="row">
+    <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="width: 280px;">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <svg class="bi pe-none me-2" width="40" height="32">
+                <use xlink:href="#bootstrap"></use>
+            </svg>
+            <span class="fs-4">Sidebar</span>
+        </a>
+        <hr>
+        <ul class="nav nav-pills flex-column mb-auto">
+            <li class="nav-item">
+                <a href="#" class="nav-link active" aria-current="page">
+                    <svg class="bi pe-none me-2" width="16" height="16">
+                        <use xlink:href="#home"></use>
+                    </svg>
+                    Home
+                </a>
+            </li>
+            <li>
+                <a href="#" class="nav-link link-body-emphasis">
+                    <svg class="bi pe-none me-2" width="16" height="16">
+                        <use xlink:href="#speedometer2"></use>
+                    </svg>
+                    Dashboard
+                </a>
+            </li>
+            <li>
+                <a href="#" class="nav-link link-body-emphasis">
+                    <svg class="bi pe-none me-2" width="16" height="16">
+                        <use xlink:href="#table"></use>
+                    </svg>
+                    Orders
+                </a>
+            </li>
+            <li>
+                <a href="#" class="nav-link link-body-emphasis">
+                    <svg class="bi pe-none me-2" width="16" height="16">
+                        <use xlink:href="#grid"></use>
+                    </svg>
+                    Products
+                </a>
+            </li>
+            <li>
+                <a href="#" class="nav-link link-body-emphasis">
+                    <svg class="bi pe-none me-2" width="16" height="16">
+                        <use xlink:href="#people-circle"></use>
+                    </svg>
+                    Customers
+                </a>
+            </li>
+        </ul>
+        <hr>
+        <div class="dropdown">
+            <a href="#" class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle"
+               data-bs-toggle="dropdown" aria-expanded="false">
+                <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+                <strong><span sec:authentication="principal.username"></span></strong>
+                <span sec:authentication="principal.authorities"></span>
+            </a>
+            <ul class="dropdown-menu text-small shadow">
+                <li><a class="dropdown-item" href="#">New project...</a></li>
+                <li><a class="dropdown-item" href="#">Settings</a></li>
+                <li><a class="dropdown-item" href="#">Profile</a></li>
+                <li>
+                    <hr class="dropdown-divider">
+                </li>
 
-            <form action="#" th:action="@{/logout}" method="POST">
-                <input type="submit" class="btn btn-info" value="Đăng xuất"/>
-            </form>
+                <li><form class="dropdown-item" action="#" th:action="@{/logout}" method="POST">
+                    <input type="submit" class="btn btn-info" value="Đăng xuất"/>
+                </form></li>
+            </ul>
         </div>
+    </div>
+    <div class="col-lg-6">
+        <h3>He thong quan ly sinh vien</h3>
+        <h4>Trang chu</h4>
+        <div>
+            <button sec:authorize="hasAnyRole('ADMIN', 'MANAGER', 'TEACHER', 'STUDENT', 'USER', 'PARENT')"
+                    class="btn btn-success">Xem
+            </button>
+            <button sec:authorize="hasAnyRole('ADMIN', 'MANAGER')" class="btn btn-success">Sửa</button>
+            <button sec:authorize="hasAnyRole('ADMIN')" class="btn btn-success">Xóa</button>
+        </div>
+        <div>
+            <a sec:authorize="hasRole('ADMIN')" class="btn btn-primary" th:href="@{/api-school/showManageSchool}">School Manager</a>
+        </div>
+
     </div>
 </div>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+<script th:src="@{/JavaScript/function.js}"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 </html>
