--- a/src/main/resources/Templates/login.html
+++ b/src/main/resources/Templates/login.html
@@ -39,8 +39,10 @@
     <hr/>
 
     <form action="#" th:action="@{/authenticateTheUser}" method="POST">
-        <div th:if="${param.error}">
-            <span style="color:red">Đăng nhập không thành công,<br/> vui lòng kiểm tra lại mật khẩu hoặc tài khoản!</span>
+        <div id="autoHide">
+            <div th:if="${param.error}">
+                <span style="color:red">Đăng nhập không thành công,<br/> vui lòng kiểm tra lại mật khẩu hoặc tài khoản!</span>
+            </div>
         </div>
         <!-- User name -->
         <div class="form-outline mb-4">
@@ -82,4 +84,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </div>
 </body>
+<script th:src="@{/JavaScript/function.js}"></script>
 </html>
