--- a/src/main/resources/Templates/School/indexSchool.html
+++ b/src/main/resources/Templates/School/indexSchool.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <div><h1>School Manage</h1></div>
     <div>
         <div id="autoHide">
             <div th:if="${errorSchoolList}">
