--- a/src/main/resources/Templates/School/addForm.html
+++ b/src/main/resources/Templates/School/addForm.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link th:href="@{/CSS/main.css}" rel="stylesheet">
-
+    <script src="/resources/static/JavaScript/function.js"></script>
 </head>
 <body>
     <h1>Add new School</h1>
@@ -66,5 +66,4 @@
         <a class="btn btn-primary" th:href="@{/api-school/showManageSchool}">School List Manage</a>
     </div>
 </body>
-<script th:src="@{/JavaScript/function.js}"></script>
 </html>
