--- a/src/main/resources/Templates/Teacher/indexTeacher.html
+++ b/src/main/resources/Templates/Teacher/indexTeacher.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Manager Teacher</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link th:href="@{/CSS/main.css}" rel="stylesheet">
+    <link href="/resources/static/CSS/main.css" rel="stylesheet">
 
     <style>
         table, th, td{
@@ -17,56 +17,67 @@
 
 <body>
 <div><h1>Teacher Manage</h1></div>
-<div>
-    <div id="autoHide">
-        <div th:if="${errorTeacherList}">
-            <span th:text="${errorTeacherList}" class="alert alert-danger"></span>
-        </div>
-        <div th:if="${Error}">
-            <span th:text="${Error}" class="alert alert-danger"></span>
-        </div>
-        <div th:if="${success}">
-            <span th:text="${success}" class="alert alert-success"></span>
+    <div class="container">
+        <div class="row">
+            <div id="autoHide">
+                <div th:if="${errorTeacherList}">
+                    <span th:text="${errorTeacherList}" class="alert alert-danger"></span>
+                </div>
+                <div th:if="${Error}">
+                    <span th:text="${Error}" class="alert-danger"></span>
+                </div>
+                <div th:if="${success}">
+                    <span th:text="${success}" class="alert-success"></span>
+                </div>
+            </div>
+            <table>
+                <th>Teacher Id</th>
+                <th>FirstName</th>
+                <th>LastName</th>
+                <th>Username</th>
+                <th>Address</th>
+                <th>Phone</th>
+                <th>Work at School</th>
+                <th>Position</th>
+                <th>Feature</th>
+                <tr th:each="teacher : ${teacherList}">
+                    <td th:text="${teacher.id}"></td>
+                    <td th:text="${teacher.firstName}"></td>
+                    <td th:text="${teacher.lastName}"></td>
+                    <td th:text="${teacher.username}"></td>
+                    <td th:text="${teacher.address}"></td>
+                    <td th:text="${teacher.phoneNumber}"></td>
+                    <!--            cach 1:-->
+                    <td th:text="${teacher.school.name} + ' (' +${teacher.school.id}+ ')'"></td>
+                    <!--            cach 2:-->
+                    <!--            <td>-->
+                    <!--                <span th:text="'Name: '+${teacher.school.name}"></span>-->
+                    <!--                <br/>-->
+                    <!--                <span th:text="'Id: ' + ${teacher.school.id}"></span>-->
+                    <!--            </td>-->
+                    <td th:text="${teacher.position}"></td>
+                    <td>
+                        <a th:href="@{/m-teacher/showModifyFormTeacher(id=${teacher.id})}" class="btn btn-success">Modify</a>
+                        <a th:href="@{/m-teacher/modify-delete(id=${teacher.id})}" class="btn btn-danger">Delete</a>
+                        <!--                    <form th:action="@{/api-school/modify-delete}" th:object="${school}" method="post">-->
+                        <!--                        <input type="hidden" th:value="${school.id}">-->
+                        <!--                        <button type="submit" class="btn btn-danger">Delete</button>-->
+                        <!--                    </form>-->
+                    </td>
+                </tr>
+            </table>
+            </div>
+            <div th:if="${success}">
+                <span th:text="${success}" class="alert alert-danger"></span>
+            </div>
+            <div>
+                <a class="btn btn-primary" th:href="@{/m-teacher/showFormAddTeacher}">Add Teacher</a>
+                <a class="btn btn-primary" th:href="@{/backHomepage}">Return Home</a>
+            </div>
         </div>
     </div>
-    <table>
-        <th>Teacher Id</th>
-        <th>FirstName</th>
-        <th>LastName</th>
-        <th>Username</th>
-        <th>Address</th>
-        <th>Phone</th>
-        <th>Work at School</th>
-        <th>Position</th>
-        <th>Feature</th>
-        <tr th:each="teacher : ${teacherList}">
-            <td th:text="${teacher.id}"></td>
-            <td th:text="${teacher.firstName}"></td>
-            <td th:text="${teacher.lastName}"></td>
-            <td th:text="${teacher.username}"></td>
-            <td th:text="${teacher.address}"></td>
-            <td th:text="${teacher.phoneNumber}"></td>
-            <td th:text="${teacher.school.getName()}"></td>
-            <td th:text="${teacher.position}"></td>
-            <td>
-                <a th:href="@{/m-teacher/showModifyFormTeacher(id=${teacher.id})}" class="btn btn-success">Modify</a>
-                <a th:href="@{/m-teacher/modify-delete(id=${teacher.id})}" class="btn btn-danger">Delete</a>
-                <!--                    <form th:action="@{/api-school/modify-delete}" th:object="${school}" method="post">-->
-                <!--                        <input type="hidden" th:value="${school.id}">-->
-                <!--                        <button type="submit" class="btn btn-danger">Delete</button>-->
-                <!--                    </form>-->
-            </td>
-        </tr>
-    </table>
-</div>
-<div th:if="${success}">
-    <span th:text="${success}" class="alert alert-danger"></span>
-</div>
-<div>
-    <a class="btn btn-primary" th:href="@{/backHomepage}">Return Home</a>
-</div>
 </body>
-<script th:src="@{/JavaScript/function.js}"></script>
+<script src="/resources/static/JavaScript/function.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
