--- a/src/main/resources/Templates/home.html
+++ b/src/main/resources/Templates/home.html
@@ -98,6 +98,9 @@
         <div>
             <a sec:authorize="hasRole('ADMIN')" class="btn btn-primary" th:href="@{/m-teacher/showManageTeacher}">Teacher manage</a>
         </div>
+        <div>
+            <a sec:authorize="hasRole('ADMIN')" class="btn btn-primary" th:href="@{/m-student/showManageStudent}">Student manage</a>
+        </div>
     </div>
 </div>
 </body>
