--- a/src/main/resources/Templates/Student/indexStudent.html
+++ b/src/main/resources/Templates/Student/indexStudent.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Manager Teacher</title>
+    <title>Manager Student</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="/resources/static/CSS/main.css" rel="stylesheet">
@@ -16,13 +16,10 @@
 </head>
 
 <body>
-<div><h1>Teacher Manage</h1></div>
+<div><h1>Student Manage</h1></div>
     <div class="container">
         <div class="row">
             <div id="autoHide">
-                <div th:if="${errorTeacherList}">
-                    <span th:text="${errorTeacherList}" class="alert alert-danger"></span>
-                </div>
                 <div th:if="${Error}">
                     <span th:text="${Error}" class="alert-danger"></span>
                 </div>
@@ -31,38 +28,46 @@
                 </div>
             </div>
             <table>
-                <th>Teacher Id</th>
+                <th>Student Id</th>
                 <th>FirstName</th>
                 <th>LastName</th>
                 <th>Username</th>
                 <th>Address</th>
                 <th>Phone</th>
-                <th>Work at School</th>
+                <th>Class</th>
+                <th>Homeroom Teacher</th>
+                <th>Study at School</th>
+                <th>Parent</th>
                 <th>Position</th>
                 <th>Feature</th>
-                <tr th:each="teacher : ${teacherList}">
-                    <td th:text="${teacher.id}"></td>
-                    <td th:text="${teacher.firstName}"></td>
-                    <td th:text="${teacher.lastName}"></td>
-                    <td th:text="${teacher.username}"></td>
-                    <td th:text="${teacher.address}"></td>
-                    <td th:text="${teacher.phoneNumber}"></td>
+                <tr th:each="student : ${studentList}">
+                    <td th:text="${student.id}"></td>
+                    <td th:text="${student.firstName}"></td>
+                    <td th:text="${student.lastName}"></td>
+                    <td th:text="${student.username}"></td>
+                    <td th:text="${student.address}"></td>
+                    <td th:text="${student.classes != null ? student.classes : 'null'}"></td>
+    <!--                cach 2:
+                        <td> <span th:unless="${student.teacher}" th:text="'null'"></span>
+                        <span th:if="${student.teacher}" th:text="${student.teacher}"></span></td>-->
+                    <td th:text="${student.teacher != null ? student.teacher : 'null'}"></td>
                     <!--            cach 1:-->
-                    <td th:text="${teacher.school.name} + ' (' +${teacher.school.id}+ ')'"></td>
+                    <td th:text="${student.school.name != null ? student.school.name : 'null'} + ' (' +${student.school.id != null ? student.school.id : 'null'}+ ')'"></td>
                     <!--            cach 2:-->
                     <!--            <td>-->
                     <!--                <span th:text="'Name: '+${teacher.school.name}"></span>-->
                     <!--                <br/>-->
                     <!--                <span th:text="'Id: ' + ${teacher.school.id}"></span>-->
                     <!--            </td>-->
+                    <td th:text="${student.parent != null ? student.parent : 'null'}"></td>
                     <td th:text="${teacher.position}"></td>
                     <td>
-                        <a th:href="@{/m-teacher/showModifyFormTeacher(id=${teacher.id})}" class="btn btn-success">Modify</a>
-                        <a th:href="@{/m-teacher/modify-delete(id=${teacher.id})}" class="btn btn-danger">Delete</a>
-                        <!--                    <form th:action="@{/api-school/modify-delete}" th:object="${school}" method="post">-->
-                        <!--                        <input type="hidden" th:value="${school.id}">-->
-                        <!--                        <button type="submit" class="btn btn-danger">Delete</button>-->
-                        <!--                    </form>-->
+                        <div>
+                            <a th:href="@{/m-student/showModifyFormStudent(id=${student.id})}" class="btn btn-success">Modify</a>
+                        </div>
+                        <div>
+                            <a th:href="@{/m-student/modify-delete(id=${teacher.id})}" class="btn btn-danger">Delete</a>
+                        </div>
                     </td>
                 </tr>
             </table>
@@ -71,12 +76,8 @@
             <span th:text="${success}" class="alert alert-danger"></span>
         </div>
         <div>
-            <div>
-                <a th:href="@{/m-teacher/showModifyFormTeacher(id=${teacher.id})}" class="btn btn-success">Modify</a>
-            </div>
-            <div>
-                <a th:href="@{/m-teacher/modify-delete(id=${teacher.id})}" class="btn btn-danger">Delete</a>
-            </div>
+            <a class="btn btn-primary" th:href="@{/m-student/showFormAddStudent}">Add Student</a>
+            <a class="btn btn-primary" th:href="@{/backHomepage}">Return Home</a>
         </div>
     </div>
 </body>
