--- a/src/main/resources/Templates/Teacher/indexTeacher.html
+++ b/src/main/resources/Templates/Teacher/indexTeacher.html
@@ -72,10 +72,8 @@
         </div>
         <div>
             <div>
-                <a th:href="@{/m-teacher/showModifyFormTeacher(id=${teacher.id})}" class="btn btn-success">Modify</a>
-            </div>
-            <div>
-                <a th:href="@{/m-teacher/modify-delete(id=${teacher.id})}" class="btn btn-danger">Delete</a>
+                <a class="btn btn-primary" th:href="@{/m-teacher/showFormAddTeacher}">Add Teacher</a>
+                <a class="btn btn-primary" th:href="@{/backHomepage}">Return Home</a>
             </div>
         </div>
     </div>
