--- a/src/main/resources/Templates/home.html
+++ b/src/main/resources/Templates/home.html
@@ -96,10 +96,16 @@
             <a sec:authorize="hasRole('ADMIN')" class="btn btn-primary" th:href="@{/api-school/showManageSchool}">School Manage</a>
         </div>
         <div>
-            <a sec:authorize="hasRole('ADMIN')" class="btn btn-primary" th:href="@{/m-teacher/showManageTeacher}">Teacher manage</a>
+            <a sec:authorize="hasAnyRole('MANAGER','ADMIN')" class="btn btn-primary" th:href="@{/m-teacher/showManageTeacher}">Teacher manage</a>
         </div>
         <div>
-            <a sec:authorize="hasRole('ADMIN')" class="btn btn-primary" th:href="@{/m-student/showManageStudent}">Student manage</a>
+            <a sec:authorize="hasAnyRole('MANAGER','ADMIN', 'TEACHER')"  class="btn btn-primary" th:href="@{/m-student/showManageStudent}">Student manage</a>
+        </div>
+        <div>
+            <a sec:authorize="hasAnyRole('MANAGER','ADMIN', 'TEACHER')"  class="btn btn-primary" th:href="@{/m-parent/showManageParent}">Parent manage</a>
+        </div>
+        <div>
+            <a sec:authorize="hasAnyRole('MANAGER','ADMIN')"  class="btn btn-primary" th:href="@{/m-user/showManageUser}">User manage</a>
         </div>
     </div>
 </div>
