--- a/src/main/resources/Templates/Register/formRegister.html
+++ b/src/main/resources/Templates/Register/formRegister.html
@@ -82,6 +82,7 @@
         <div class="form-outline mb-4">
             <label for="position" class="form-label">Current Occupation: </label>
             <select th:field="*{position}" id="position" name="position" required>
+                <option th:value="#" selected>----</option>
                 <option th:value="User">User</option>
                 <option th:value="Parent">Parent</option>
                 <option th:value="Student">Student</option>
